UI + optimization improvements
